--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Base application theme. -->
-    <style name="SeriesTrackerTheme" parent="android:Theme.Holo.Light">
-        <item name="android:actionBarStyle">@style/SeriesTrackerTheme.ActionBar</item>
+    <style name="SeriesTrackerTheme" parent="Theme.AppCompat.Light">
+    <item name="android:actionBarStyle">@style/SeriesTrackerTheme.ActionBar</item>
         <item name="android:editTextBackground">@drawable/seriestracker_edit_text_holo_light</item>
         <item name="android:textViewStyle">@style/SeriesTrackerTheme.Widget.TextView</item>
     </style>
