--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="LightOrange">#ffa282</color>
     <color name="Orange">#ff6633</color>
+    <color name="DarkOrange">#ffa282</color>
 
     <color name="White">#ffffff</color>
 
