--- a/app/src/main/res/layout/series_add.xml
+++ b/app/src/main/res/layout/series_add.xml
@@ -2,7 +2,6 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,11 +11,11 @@
     android:padding="@dimen/padding_edge">
 
     <TextView
-        style="@style/SeriesTrackerTheme.Headline"
+        style="@style/Headline"
         android:text="@string/add_new_series"/>
 
     <View
-        style="@style/SeriesTrackerTheme.HorizontalLine.Orange"/>
+        style="@style/HorizontalLine.Orange"/>
 
     <EditText
         android:id="@+id/seriesNameEditText"
@@ -26,6 +25,6 @@
 
         android:gravity="center"
         android:imeOptions="actionDone"
-        android:inputType="textAutoComplete|textCapWords" />
+        android:inputType="textAutoComplete|textCapWords"/>
 
 </LinearLayout>
