Define primary color for theme

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,15 +3,20 @@
     <!-- Base application theme. -->
     <style name="SeriesTrackerTheme" parent="Theme.AppCompat.Light">
         <item name="android:actionBarStyle">@style/AppBar</item>
-        <item name="android:editTextBackground">@drawable/seriestracker_edit_text_holo_light</item>
+        <item name="android:editTextBackground">
+            @drawable/seriestracker_edit_text_holo_light
+        </item>
         <item name="android:textViewStyle">@style/TextView</item>
+
+        <item name="colorPrimary">@color/Orange</item>
+        <item name="colorPrimaryDark">@color/DarkOrange</item>
     </style>
 
     <style name="AppBar" parent="@android:style/Widget.Holo.Light.ActionBar">
-    <item name="android:background">@color/LightOrange</item>
+        <item name="android:background">@color/LightOrange</item>
     </style>
 
     <style name="TextView" parent="android:Widget.Holo.Light.TextView">
-    <item name="fontPath">fonts/Postface.otf</item>
+        <item name="fontPath">fonts/Postface.otf</item>
     </style>
 </resources>
