Use grey as accent color for the moment

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,7 @@
 
         <item name="colorPrimary">@color/Orange</item>
         <item name="colorPrimaryDark">@color/DarkOrange</item>
+        <item name="colorAccent">@color/Grey</item>
     </style>
 
     <style name="AppBar" parent="@android:style/Widget.Holo.Light.ActionBar">
