--- a/app/src/main/res/layout/series_overview.xml
+++ b/app/src/main/res/layout/series_overview.xml
@@ -1,4 +1,4 @@
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="de.alexanderkohout.seriesreminder.ui.SeriesOverviewFragment"
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
 
     android:background="@color/White"
-    android:orientation="vertical"
     android:paddingTop="@dimen/padding_edge">
 
     <android.support.v7.widget.RecyclerView
@@ -16,9 +15,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        android:layout_marginTop="@dimen/margin_views"
         android:paddingLeft="@dimen/padding_edge"
         android:paddingRight="@dimen/padding_edge"
         android:scrollbars="none"/>
 
-</LinearLayout>
+    <ImageButton
+        android:id="@+id/addSeriesButton"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:background="@android:color/transparent"
+        android:layout_margin="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:padding="12dp"
+        android:src="@drawable/ic_add"/>
+
+</RelativeLayout>
