--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,12 +1,5 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
-
-    <item
-        android:id="@+id/action_add"
-        android:icon="@drawable/ic_add"
-        android:title="@string/add"
-        android:showAsAction="ifRoom">
-    </item>
+    tools:context="de.alexanderkohout.seriesreminder.ui.SeriesOverviewFragment">
 
 </menu>
