--- a/app/src/main/res/layout/series_overview.xml
+++ b/app/src/main/res/layout/series_overview.xml
@@ -26,6 +26,7 @@
         android:layout_height="wrap_content"
 
         android:background="@android:color/transparent"
+        android:elevation="8dp"
         android:layout_margin="16dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
