Use a grey background for the floating action button

--- a/app/src/main/res/layout/series_overview.xml
+++ b/app/src/main/res/layout/series_overview.xml
@@ -25,9 +25,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:background="@android:color/transparent"
+        android:background="@drawable/button_fab"
         android:elevation="8dp"
-        android:layout_margin="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:padding="12dp"
