--- a/app/src/main/res/layout/series_overview.xml
+++ b/app/src/main/res/layout/series_overview.xml
@@ -6,10 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:background="@color/White"
-    android:paddingTop="@dimen/padding_edge">
+    android:background="@color/White">
 
-    <android.support.v7.widget.RecyclerView
+<android.support.v7.widget.RecyclerView
         android:id="@+id/seriesRecyclerView"
 
         android:layout_width="match_parent"
