Performed some renaming of classes and resource files to make it easier

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,5 +1,5 @@
 <menu
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="de.alexanderkohout.seriesreminder.ui.SeriesOverviewFragment">
+    tools:context="de.alexanderkohout.seriesreminder.ui.OverviewFragment">
 
 </menu>
