--- a/app/src/main/res/layout/overview.xml
+++ b/app/src/main/res/layout/overview.xml
@@ -1,14 +1,14 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="de.alexanderkohout.seriesreminder.ui.SeriesOverviewFragment"
+    tools:context="de.alexanderkohout.seriesreminder.ui.OverviewFragment"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
     android:background="@color/White">
 
-<android.support.v7.widget.RecyclerView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/seriesRecyclerView"
 
         android:layout_width="match_parent"
