Use a real dark orange (was fake until now)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="LightOrange">#ffa282</color>
     <color name="Orange">#ff6633</color>
-    <color name="DarkOrange">#ffa282</color>
+    <color name="DarkOrange">#E64A19</color>
 
     <color name="White">#ffffff</color>
 
